refactor(FileUtil): 简化文件读取实现
- 移除手动字节数组转换的旧实现
- 使用 Files.readString() 替代手动编码处理
- 添加 StandardCharsets 导入以支持新方法
- 提高代码可读性和性能